--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,5 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: Format code
+      - name: Format Go code
         run: test -z $(go fmt ./...)
