--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,6 +34,6 @@ jobs:
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-472900/notely-ar-repo/notely:latest .
 
       - name: Deploy to Cloud runs-on
-        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-472900/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-00001-p7n --max-instances=4
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-472900/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-472900 --max-instances=4
 
 
