--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -25,7 +28,7 @@ jobs:
       - name: Authenticate with GCP
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v3'
@@ -35,5 +38,6 @@ jobs:
 
       - name: Deploy to Cloud runs-on
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-472900/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-472900 --max-instances=4
+
 
 
