--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,8 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up goose
-        runs: go install github.com/pressly/goose/v3/cmd/goose@latest
-         
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Set up Go
         uses: actions/setup-go@v5
